# orpheus-sdk

./: .clang-format  .clang-tidy  .claudeignore  .codexcloudrc.json  .commitlintrc.json  .env.example  .eslintignore  .eslintrc.cjs  .gitattributes  .gitignore  .hotfiles  .lintstagedrc.json  .prettierignore  .prettierrc.json  .tidy.files  2025-10-23-orpheus-clipcomposer-sdk-sprint.txt  2025-10-23-setting-up-edit-dialog-sprint.txt  AGENTS.md  ARCHITECTURE.md  AUDIT.md  CHANGELOG.md  CLAUDE.bak  CLAUDE.md  CMakeLists.txt  LAUNCH_CLIP_COMPOSER.md  LICENSE  README  README.md  ROADMAP.md  THIRD_PARTY.md  budgets.json  codex_bundle.txt  compile_commands.json  cppcheck.top  file_bundle.txt  oct31-PRs.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vcpkg.json
adapters/minhost/: CMakeLists.txt  click_renderer.cpp  click_renderer.h  main.cpp
adapters/reaper/: CMakeLists.txt  NOTICE  README.md  panel.cpp  panel.h  reaper_entry.cpp
apps/clip-composer/: .claudeignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  OCC_RELEASE_HANDOFF.md  PROGRESS.md  README.md  build-launch.sh  clean-relaunch.sh  launch.sh
apps/clip-composer/.claude/: README.md  SPRINT_SUMMARY_2025-10-12.md  SPRINT_SUMMARY_2025-10-12_EVENING.md  implementation_progress.md
apps/clip-composer/.claude/agents/: README.md  release-builder.md  waveform-optimization.md
apps/clip-composer/.claude/skills/: README.md  build-utils.sh  validate.sh
apps/clip-composer/Resources/icons/: README.md
apps/clip-composer/Source/: Main.cpp  MainComponent.cpp  MainComponent.h
apps/clip-composer/Source/Audio/: AudioEngine.cpp  AudioEngine.h
apps/clip-composer/Source/AudioEngine/: AudioEngine.cpp  AudioEngine.h
apps/clip-composer/Source/ClipGrid/: ClipButton.cpp  ClipButton.h  ClipGrid.cpp  ClipGrid.h
apps/clip-composer/Source/Session/: SessionManager.cpp  SessionManager.h
apps/clip-composer/Source/Transport/: TransportControls.cpp  TransportControls.h
apps/clip-composer/Source/UI/: AudioSettingsDialog.cpp  AudioSettingsDialog.h  ClipEditDialog.cpp  ClipEditDialog.h  ColorSwatchPicker.cpp  ColorSwatchPicker.h  HKGroteskLookAndFeel.h  InterLookAndFeel.h  PreviewPlayer.cpp  PreviewPlayer.h  TabSwitcher.cpp  TabSwitcher.h  WaveformDisplay.cpp  WaveformDisplay.h
apps/clip-composer/docs/: LAUNCH_CLIP_COMPOSER.md
apps/clip-composer/docs/OCC/: CLAUDE.md  OCC001 Cursor Agent Prompt v1.md  OCC008 Cursor Agent Prompt v7.md  OCC009 Session Metadata Manifest.md  OCC010 Wireframes v1.md  OCC011 Wireframes v2.md  OCC012 Cursor Agent Prompt v8.md  OCC013 Advanced Audio Driver Integration for a Professional Soundboard Application.md  OCC014 Cursor Agent Prompt v9.md  OCC015 Appendix_ Best Practices for Apple Silicon vs_ Intel Chips.md  OCC016 Appendix_ Best Practices for Deploying on Windows Platforms.md  (+60 more)
apps/clip-composer/tests/: CMakeLists.txt  test_audio_engine_clips.cpp  test_audio_engine_init.cpp  test_audio_engine_multi_tab.cpp  test_audio_engine_playback.cpp  test_performance.cpp  test_session_manager.cpp
apps/juce-demo-host/: CMakeLists.txt
apps/juce-demo-host/Source/: Main.cpp
examples/multi_clip_trigger/: CMakeLists.txt  README.md  multi_clip_trigger.cpp
examples/offline_renderer/: CMakeLists.txt  README.md  offline_renderer.cpp
examples/simple_player/: CMakeLists.txt  README.md  simple_player.cpp
src/: CMakeLists.txt
src/core/: abi.cpp  abi_exports.cpp  session.cpp
src/core/abi/: abi_internal.h  clipgrid_api.cpp  render_api.cpp  session_api.cpp
src/core/adm/: entity_graph.cpp
src/core/audio_io/: CMakeLists.txt  audio_file_reader_libsndfile.cpp  audio_file_reader_libsndfile.h  create_audio_file_reader_stub.cpp  dummy_audio_driver.cpp  dummy_audio_driver.h  waveform_processor.cpp
src/core/common/: errors.cpp  json_parser.cpp  json_parser.h  performance_monitor.cpp
src/core/otio/: reconform_plan.cpp  reconform_plan.h
src/core/render/: orpheus_wav.hpp  pcm.cpp  pcm.hpp  render_tracks.h
src/core/routing/: CMakeLists.txt  clip_routing.cpp  clip_routing.h  gain_smoother.cpp  gain_smoother.h  routing_matrix.cpp  routing_matrix.h
src/core/session/: json_io.cpp  json_io.h  scene_manager.cpp  session_graph.cpp  session_graph.h
src/core/transport/: CMakeLists.txt  transport_controller.cpp  transport_controller.h
src/dsp/: oscillator.cpp
src/orpheus/: render_tracks.cpp
src/platform/audio_drivers/: CMakeLists.txt  driver_manager.cpp
tests/: CMakeLists.txt  abi_smoke.cpp  adm_entity_graph.cpp  filename_rules.cpp  json_minhost_bridge_tests.cpp  otio_reconform_plan.cpp  reaper_adapter.cpp  render_tracks.cpp  render_tracks_basic.cpp  session_api.cpp  session_graph_invariants.cpp  session_graph_ownership.cpp  session_graph_scenes.cpp  session_roundtrip.cpp
tests/abi_link/: main.cpp
tests/audio_io/: CMakeLists.txt  audio_file_reader_test.cpp  coreaudio_driver_test.cpp  device_hot_swap_test.cpp  driver_manager_test.cpp  dummy_driver_test.cpp  waveform_processor_test.cpp
tests/cmake/: run_find_package.cmake
tests/cmake/find_package/: CMakeLists.txt  main.cpp
tests/common/: CMakeLists.txt  performance_integration_test.cpp  performance_monitor_test.cpp
tests/dsp/: oscillator_test.cpp
tests/fixtures/reconform/: delete.json  insert.json  retime.json
tests/integration/: README.md  run-tests.sh  smoke.test.mjs
tests/routing/: CMakeLists.txt  clip_routing_test.cpp  gain_smoother_test.cpp  multi_channel_routing_test.cpp  routing_matrix_test.cpp
tests/session/: CMakeLists.txt  scene_manager_test.cpp
tests/support/: fnv1a64.hpp  synth.hpp  wav_parse.hpp
tests/transport/: CMakeLists.txt  clip_cue_points_test.cpp  clip_cue_points_test_simple.cpp  clip_gain_test.cpp  clip_loop_test.cpp  clip_metadata_test.cpp  clip_restart_test.cpp  clip_seek_test.cpp  fade_processing_test.cpp  integration_test.cpp  multi_clip_stress_test.cpp  out_point_enforcement_test.cpp  transport_controller_test.cpp
tools/cli/: CMakeLists.txt  inspect_session.cpp
tools/conformance/: CMakeLists.txt  compare_json.py  compare_wav.py  json_roundtrip.cpp  run_conformance.py
tools/perf/: CMakeLists.txt  perf_render_click.cpp
(+527 files in other folders)
